# AI-2024-2_Sem

./: .gitignore  README.md
Blockchain AI/: homework_3_blockchain.ipynb
Blockchain AI/Homework 1/: blockchain.py  hw_1.ipynb
DL NLP/: pyproject.toml  tox.ini
DL NLP/notebooks/: hw_1.ipynb  hw_2.ipynb  hw_3.ipynb  hw_4.ipynb
